# keiko-spina

./: .coveragerc  .deployment_mode  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  .sonarqube-analysis.yml  Dockerfile  Dockerfile.dev  Keiko-Architektur-Beschreibung.md  LICENSE  Makefile  Makefile.edge  README.md  __init__.py  analyze_exceptions.py  codecov.yml  docker-compose.dev-essential.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.sonarqube.yml  docker-compose.training.yml  enterprise_security_validation.py  locustfile.py  main.py  main_api_server.py  mkdocs.yml  otel-collector-config.yaml  owasp_security_validation.py  prometheus.yml  py.typed  pyproject.toml  pytest.ini  requirements-docs.txt  serve-docs.sh  (+3 more)
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  TECHNOLOGY_STACK.md  pull_request_template.md  renovate.json
agents/: __init__.py  _compat.py  base_agent.py  base_agent_mixins.py  constants.py  exceptions.py  logging_utils.py
api/: __init__.py  asyncapi.yaml  capabilities.py  versioning.py  webrtc_routes.py
api-contracts/: versions.yaml
api-gateway/: kong-gateway.yaml
app/: __init__.py  application.py  health_endpoints.py  service_container.py  startup_manager.py  websocket_handlers.py
audit_system/: __init__.py  action_logger.py  audit_constants.py  audit_middleware.py  audit_monitoring.py  audit_performance.py  audit_pii_redaction.py  audit_utils.py  compliance_manager.py  core_audit_engine.py  security_audit_adapter.py  tamper_proof_trail.py
auth/: __init__.py  enterprise_auth.py  unified_enterprise_auth.py
config/: __init__.py  agent_circuit_breaker_config.py  api_versioning_config.py  azure_settings.py  communication_settings.py  constants.py  core_settings.py  database_settings.py  deployment_mode.py  domain_validation_config.py  env_utils.py  kei_mcp_config.py  monitoring_config.py  monitoring_settings.py  mtls_config.py  oidc_config.py  orchestrator_performance.env  security_settings.py  settings.py  unified_rate_limiting.py  voice_config.py  voice_performance_config.py  voice_rate_limiting_config.py  webhook_audit_config.py  websocket_auth_config.py
core/: __init__.py  constants.py  container.py  error_handler.py  exceptions.py  logging_strategy.py  versioning.py
data_models/: __init__.py  a2a.py  api.py  constants.py  utils.py  websocket.py
disaster-recovery/: dr-test-suite.py
docs/: keiko-backbone-architektur.md
edge/: __init__.py  auto_scaler.py  config.py  edge_types.py  load_balancer.py  node.py  node_registry.py  performance_monitor.py  registry.py  task_processor.py
grpc_services/: __init__.py  grpc_server.py  sdk_platform_service.py
infrastructure/: docker-compose.yml  grafana_dashboard.json  monitoring_config.json  prometheus_alerts.yml  test-metrics.yml
kei_logging/: __init__.py  clickable_logging_formatter.py  enhanced_error_handling.py  enhanced_pii_redaction.py  log_links.py  pii_redaction.py  training_logger.py
messaging/: __init__.py  inbox_manager.py  outbox_manager.py  platform_event_bus.py  platform_nats_client.py  platform_schema_registry.py
middleware/: constants.py  kei_stream_rate_limiting.py  rate_limiting.py  rate_limiting_error_handler.py  rate_limiting_types.py
monitoring/: __init__.py  alert_manager.py  azure_monitoring.py  circuit_breaker.py  config_base.py  custom_metrics.py  error_handling.py  health_checker.py  health_checks.py  interfaces.py  langchain_tracing_otel.py  langsmith_integration.py  metrics_collector.py  metrics_definitions.py  monitoring_service.py  performance_monitor.py  prometheus_middleware.py  voice_metrics.py
observability/: __init__.py  agent_metrics.py  base_metrics.py  budget.py  deadline.py  kei_mcp_metrics.py  logfire_config.py  logfire_integration.py  logfire_llm_tracking.py  metrics_aggregator.py  metrics_export.py  system_integration_metrics.py  traced_http_client.py  tracing.py
policy_engine/: __init__.py  base_detectors.py  base_engines.py  compliance_framework.py  config.py  constants.py  core_policy_engine.py  data_minimization.py  enhanced_pii_redaction.py  policy_middleware.py  prompt_guardrails.py  redaction_strategies.py  safety_guardrails.py
quotas_limits/: __init__.py  agent_rate_limiter.py  base_manager.py  budget_manager.py  constants.py  core_quota_manager.py  quota_analytics.py  quota_middleware.py  quota_monitoring.py  utils.py
scripts/: analyze-metrics.py  api_contract_validator.py  architecture_compliance_analyzer.py  backend_logging_independence.py  bootstrap-dev.sh  dashboard-data-collector.py  generate-compliance-dashboard.py  nats_jetstream_architecture_analyzer.py  production-startup.sh  quick-startup-test.sh  repository_migration.sh  rollback_migration.sh  serve-docs.sh  setup_monitoring.sh  simple-startup.sh  sonar-report-generator.py  startup-orchestrator.sh  test-coverage.sh  validate-architecture-compliance.py  voice_config_migration_test.py
security/: __init__.py  authorization_service.py  constants.py  enhanced_oidc_client.py  kei_mcp_auth.py  mtls_manager.py  mtls_middleware.py  n8n_hmac_validator.py  rbac_abac_system.py  rbac_config_loader.py  rbac_models.py  scope_permission_manager.py  tenant_isolation.py
services/: __init__.py  a2a_service.py  agent_heartbeat_service.py  agent_orchestrator_service.py  redis_rate_limiter.py  system_heartbeat_service.py  unified_domain_revalidation_service.py
specs/: __init__.py  api_spec_generator.py  asyncapi_generator.py  base_generator.py  constants.py  openapi_generator.py  publisher.py  spec_cli.py  utils.py
storage/: __init__.py  client_factory.py  constants.py  utils.py
task_management/: __init__.py  constants.py  core_task_manager.py  idempotency_manager.py  kei_bus_integration.py  task_api.py  task_execution_engine.py  task_integration.py  utils.py
tests/: __init__.py
utils/: __init__.py  content_type_utils.py  prompt_sanitizer.py  sanitization_constants.py  storage_utils.py  (+1 more)
(+920 files in other folders)
